--- a/content/publication/conference-paper/cite.bib
+++ b/content/publication/conference-paper/cite.bib
@@ -1,7 +1,7 @@
 
-@techreport{appianin2023house,
-  title={House Price Expectations and Consumer Spending},
+@techreport{appianin2024house,
+  title={House Price Experiences and Consumer Spending},
   author={Appianin, Benjamin},
-  year={2023},
-  institution={City University of Hong Kong}
+  year={2024},
+  institution={University of Cambridge}
 }
